--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/bin
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
@@ -55,6 +56,9 @@ ExportedObj/
 # Unity3D generated file on crash reports
 sysinfo.txt
 
+# Added assets
+/[Aa]ssets/[Cc]ontrols/*
+
 # Builds
 *.apk
 *.aab
@@ -70,3 +74,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# nuget packages
+/[Aa]ssets/[Pp]ackages
