--- a/Assets/StreamingAssets/config/gameSettings.json
+++ b/Assets/StreamingAssets/config/gameSettings.json
@@ -1,4 +1,5 @@
 {
+    "RunningTime" : 120,
     "CsharpHostPath": "Runners/CSharpHost/CSharpHost.exe",
     "CsharpHostport": 50109,
     "JsHostPath": "Runners/JsHost/jsHost.exe",
