player host 업데이트. cleanup api 추가.

--- a/Assets/StreamingAssets/Runners/CSharpHost/web.config
+++ b/Assets/StreamingAssets/Runners/CSharpHost/web.config
@@ -5,8 +5,8 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet" arguments=".\CSharpHost.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+      <aspNetCore processPath=".\CSharpHost.exe" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
     </system.webServer>
   </location>
 </configuration>
-<!--ProjectGuid: 68AFCDDD-046B-4F9B-B731-11B0502FFC98-->
+<!--ProjectGuid: 68afcddd-046b-4f9b-b731-11b0502ffc98-->
