playerHost 를 종료하지 않고 게임을 끌 수 있도록 처리.
GameSettings 에 playerHost 를 종료하지 않고 게임을 끌 수 있는 옵션 플래그 추가.
- CloseWithoutPlayerHostExit 추가.
- 게임 종료 시 playerHost 종료 루틴에서 이 옵션을 확인 후 건너뛰도록 설정.

playerHost 종료 전 cleanup 호출하도록 추가.

PlayerRunnerBase 리팩토링
- PlayerRunnerBase<T> 로 전환하여 공통으로 사용할 수 있는 부분을 정리.
- RunnerHostMediator 를 이용해 호출 가능한 부분 중 platform 을 위한 부분은 IPlayer 에서 제거.(IPlayer 는 플레이어 개별 기능만 보관하도록.)

게임 종료 루틴을 GameManager 로 일원화.
- 요기에 PlayerHost 관련된 호출을 넣도록 변경.

--- a/Assets/StreamingAssets/config/gameSettings.json
+++ b/Assets/StreamingAssets/config/gameSettings.json
@@ -3,5 +3,6 @@
     "CsharpHostPath": "Runners/CSharpHost/CSharpHost.exe",
     "CsharpHostport": 50109,
     "JsHostPath": "Runners/JsHost/jsHost.exe",
-    "JsHostport": 50209
+    "JsHostport": 50209,
+    "CloseWithoutPlayerHostExit" : true
 }
