--- a/Assets/StreamingAssets/config/gameSettings.json
+++ b/Assets/StreamingAssets/config/gameSettings.json
@@ -4,5 +4,5 @@
     "CsharpHostport": 50109,
     "JsHostPath": "Runners/JsHost/jsHost.exe",
     "JsHostport": 50209,
-    "CloseWithoutPlayerHostExit" : true
+    "CloseWithoutPlayerHostExit" : false
 }
