player host 에서 -1 혹은 에러가 반환될 경우 예외를 던지지 않고 -1 만 반환하도록 수정.

--- a/Assets/StreamingAssets/config/gameSettings.json
+++ b/Assets/StreamingAssets/config/gameSettings.json
@@ -4,5 +4,5 @@
     "CsharpHostport": 50109,
     "JsHostPath": "Runners/JsHost/jsHost.exe",
     "JsHostport": 50209,
-    "CloseWithoutPlayerHostExit" : false
+    "CloseWithoutPlayerHostExit" : true
 }
