add random gimmick

--- a/Assets/StreamingAssets/config/gameSettings.json
+++ b/Assets/StreamingAssets/config/gameSettings.json
@@ -4,5 +4,7 @@
     "CsharpHostport": 50109,
     "JsHostPath": "Runners/JsHost/jsHost.exe",
     "JsHostport": 50209,
-    "CloseWithoutPlayerHostExit" : true
+    "CloseWithoutPlayerHostExit" : true,
+    "UseRandomGimmick" : true,
+    "GimmickInterval": 3.0
 }
