blackMatter 생성 위치 에러 수정.

--- a/Assets/StreamingAssets/config/gameSettings.json
+++ b/Assets/StreamingAssets/config/gameSettings.json
@@ -5,6 +5,5 @@
     "JsHostPath": "Runners/JsHost/jsHost.exe",
     "JsHostport": 50209,
     "CloseWithoutPlayerHostExit" : true,
-    "UseRandomGimmick" : true,
-    "GimmickInterval": 3.0
+    "UseRandomGimmick" : true
 }
