--- a/Assets/StreamingAssets/config/gameSettings.windows.json
+++ b/Assets/StreamingAssets/config/gameSettings.windows.json
@@ -4,6 +4,10 @@
     "CsharpHostport": 50109,
     "JsHostPath": "Runners/Windows/JsHost/jsHost.exe",
     "JsHostport": 50209,
+    "CppHostPath": "Runners/Windows/JsHost/CppHost.exe",
+    "CppHostport": 50309,
+    "PyHostPath": "Runners/Windows/JsHost/PyHost.exe",
+    "PyHostport": 50409,
     "CloseWithoutPlayerHostExit" : true,
     "UseRandomGimmick" : true
 }
